--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
          <div id="toc">
             <a href="https://www.youtube.com/embed/jmq9COba1j4">Video 1</a><br>
             <a href="https://www.youtube.com/embed/9Fo1v1y62a8?list=RDjmq9COba1j4">Video 2</a><br>
-            <a href=""https://www.youtube.com/embed/6P7g59BnVW4?list=RDjmq9COba1j4">Video 3</a><br>
+            <a href="https://www.youtube.com/embed/6P7g59BnVW4?list=RDjmq9COba1j4">Video 3</a><br>
             <a href="">Video 4</a><br>
             <a href="">Video 5</a><br>
             <a href="">Video 6</a><br>
