--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                   alert ("No Video URL found");
                } else {
 //                  var videlt = '<video id="myvideo" width="640" controls><source src="' + vidurl + '">Your browser does not support the video tag.</video>';
-                  var videlt = '<iframe id="ifr" width="100%" src="'+vidurl+'"frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>'
+                  var videlt = '<iframe id="ifr" width="100%" src="'+vidurl+'" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>'
                   $("#detail").html(videlt);
-		  $("#detail #ifr").height($("#detail").height());
+		  //$("#detail #ifr").height($("#detail").height());
                   // $("#myvideo")[0].play();
                }
             }
