--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                } else {
 //                  var videlt = '<video id="myvideo" width="640" controls><source src="' + vidurl + '">Your browser does not support the video tag.</video>';
 		  var amps = vidurl.search("[?]")==-1?"?":"&"
-                  var videlt = '<iframe id="ifr" width="100%" src="'+vidurl+amps+'autoplay=1" frameborder="0" allow="autoplay; fullscreen; encrypted-media" allowfullscreen> </iframe>'
+                  var videlt = '<iframe id="ifr" width="100%" src="'+vidurl+amps+'autoplay=1&mute=1" frameborder="0" allow="autoplay; fullscreen; encrypted-media" allowfullscreen> </iframe>'
 		  $("#detail").html(videlt);
 //		  console.log($("#detail #ifr").height());
 //		       console.log($("#detail").height())
-		  $("#detail #ifr").height($("#detail").height());
+		  $("#detail #ifr").height($("#detail").height()-4);
 //		       console.log($("#detail #ifr").height());
                   
 		 
