--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       #toc {
          position:fixed;
          // float:left;
-         margin:2rem 0.5rem 1rem, 1rem;
+         margin:2rem 0.5rem 1rem 1rem;
          width:10rem;
          max-height:calc(100vh - 220px);
          overflow-y:auto;
@@ -64,7 +64,7 @@
       .menu {
         position:relative;
         float:right;
-        margin: auto auto auto 2rem;
+        margin: auto 2rem auto 2rem;
         top:1rem;
       }
 
