--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   var videlt = '<iframe id="ifr" width="100%" src="'+vidurl+amps+'autoplay=1&mute=1" frameborder="0" allow="autoplay; fullscreen; encrypted-media" allowfullscreen> </iframe>'
 		  $("#detail").html(videlt);
 //		  console.log($("#detail #ifr").height());
-		       console.log($("#detail").height())
+		       console.log("det height:"+ $("#detail").height())
 		  $("#detail #ifr").height($("#detail").height()-5);
 //		       console.log($("#detail #ifr").height());
                }
