--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          max-width:1000px;
          margin: 0px auto 10px auto;
       }
-	   .content div {
+	   .content > div {
 		   margin: 0.5rem 0.5rem 0.5rem 0.5rem;	      
 	   }
 
