--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
 
       .content {
          max-width:1000px;
-         margin: 0px auto 10px auto;
+         //margin: 0px auto 10px auto;
+	  padding: 0.5rem 0.5rem 0.5rem 0.5rem;	          
+	      display:flex;
       }
-	   .content > div {
+	   .content > XXXXXdiv {
 		   margin: 0.5rem 0.5rem 0.5rem 0.5rem;	      
 	   }
 
@@ -49,7 +51,7 @@
          position:fixed;
          // float:left;
         // margin:2rem 0.5rem 1rem 1rem;
-    	margin: 0.5rem 0.5rem 0.5rem 0.5rem;	      
+    	//margin: 0.5rem 0.5rem 0.5rem 0.5rem;	      
          width:10rem;
          max-height:calc(100vh - 220px);
          overflow-y:auto;
@@ -67,10 +69,11 @@
       }
 	   
       .menu {
-        position:relative;
-        float:right;
-        margin: auto 2rem auto 2rem;
-        top:1rem;
+	          margin: auto 0.5rem auto auto;
+        //position:relative;
+        //float:right;
+        //margin: auto 2rem auto 2rem;
+        //top:1rem;
       }
 
       .menu .item {
