--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       .content {
          max-width:1000px;
-         //margin: 0px auto 10px auto;
+         margin: 0px auto 0px auto;
 	  padding: 0.5rem 0.5rem 0.5rem 0.5rem;	          
 	      display:flex;
       }
