--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       #main {
          position:relative;
-         margin-top:100px;
+         margin-top:90px;
       }
 
       footer {
@@ -40,13 +40,10 @@
       .content {
          max-width:1000px;
          margin: 0px auto 0px auto;
-	  padding: 0.5rem 0.5rem 0.5rem 0.5rem;	          
-	      display:flex;
+	 padding: 0.5rem 0.5rem 0.5rem 0.5rem;	          
+	 display:flex;
       }
-	   .content > XXXXXdiv {
-		   margin: 0.5rem 0.5rem 0.5rem 0.5rem;	      
-	   }
-
+	   
       #toc {
          position:fixed;
          // float:left;
@@ -60,7 +57,7 @@
       }
 
       #detail {
-	 margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+	 margin: 0 0.5rem 0 0.5rem;
          position:relative;
          left:14rem;
          width:calc(100% - 15rem);
@@ -116,7 +113,7 @@
                   var videlt = '<iframe id="ifr" width="100%" src="'+vidurl+amps+'autoplay=1&mute=1" frameborder="0" allow="autoplay; fullscreen; encrypted-media" allowfullscreen> </iframe>'
 		  $("#detail").html(videlt);
 //		  console.log($("#detail #ifr").height());
-		       console.log("det height:"+ $("#detail").height())
+//		       console.log("det height:"+ $("#detail").height())
 		  $("#detail #ifr").height($("#detail").height()-5);
 //		       console.log($("#detail #ifr").height());
                }
@@ -156,12 +153,7 @@
 
             Erat placerat lacinia habitasse quam aenean? Dignissim tristique urna porta a id augue. Lorem sociis, hendrerit est nibh eleifend rutrum tortor inceptos lectus blandit habitasse! Ultrices egestas fames ante est vitae purus venenatis donec rhoncus enim ultrices. Feugiat vivamus proin justo vulputate, consequat diam nulla amet senectus senectus felis. Elit rhoncus torquent aenean per magna diam! Phasellus laoreet quis tempus. Parturient volutpat condimentum arcu tincidunt tempor. Tempor et ipsum tortor.
 
-Erat placerat lacinia habitasse quam aenean? Dignissim tristique urna porta a id augue. Lorem sociis, hendrerit est nibh eleifend rutrum tortor inceptos lectus blandit habitasse! Ultrices egestas fames ante est vitae purus venenatis donec rhoncus enim ultrices. Feugiat vivamus proin justo vulputate, consequat diam nulla amet senectus senectus felis. Elit rhoncus torquent aenean per magna diam! Phasellus laoreet quis tempus. Parturient volutpat condimentum arcu tincidunt tempor. Tempor et ipsum tortor.
-
-Erat diam dis litora penatibus magna pretium lorem aenean libero maecenas. A auctor ligula suspendisse aliquam et parturient. Imperdiet nullam quis placerat ornare congue torquent nisi ipsum aliquet condimentum ipsum eleifend. Dolor inceptos aptent conubia, sociosqu nulla quam leo imperdiet dictumst cras. Metus donec massa accumsan ullamcorper purus! Proin himenaeos nisl libero accumsan sollicitudin. Mattis eu metus malesuada, semper blandit.
-
-Sed platea pretium pulvinar placerat egestas. Porta hendrerit mattis faucibus posuere maecenas, cursus morbi dui turpis. Nulla aliquam varius est etiam duis nostra vulputate proin tempor. Scelerisque justo bibendum ultricies cras luctus venenatis donec fermentum libero sit senectus malesuada. At nostra, ornare luctus condimentum aliquet. Nec vehicula phasellus mi erat natoque. Venenatis dignissim velit cum maecenas integer euismod ultrices? Platea fringilla sodales velit ante nam senectus consectetur. Egestas iaculis ultrices dolor natoque bibendum curabitur felis! Tempor porttitor fusce convallis congue. Inceptos quis lectus taciti ullamcorper. Dictum platea sodales interdum quam. Risus laoreet.
-
+No need to place long text here, otherwithe we need to to change site layout
          <div>
       </div>
    </section>
