--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 
             Pretium cursus faucibus mauris. Nam, posuere phasellus tellus ornare praesent maecenas arcu at dapibus! Sem etiam faucibus euismod platea viverra velit. Facilisi pulvinar dictumst faucibus ut erat dui dictumst! Integer rutrum inceptos praesent imperdiet euismod lacus ullamcorper eleifend. Aliquet cum tellus pretium odio curae;; facilisis metus ante commodo himenaeos? Luctus id penatibus non arcu.
 
-            Erat placerat lacinia habitasse quam aenean? Dignissim tristique urna porta a id augue. Lorem sociis, hendrerit est nibh eleifend rutrum tortor inceptos lectus blandit habitasse! Ultrices egestas fames ante est vitae purus venenatis donec rhoncus enim ultrices. Feugiat vivamus proin justo vulputate, consequat diam nulla amet senectus senectus felis. Elit rhoncus torquent aenean per magna diam! Phasellus laoreet quis tempus. Parturient volutpat condimentum arcu tincidunt tempor. Tempor et ipsum tortor.
+            Erat placerat lacinia habitasse quam aenean? Dignissim tristique urna porta a id augue. Lorem sociis,  est nibh   tortor inceptos lectus blandit habitasse! Ultrices egestas fames ante est vitae purus venenatis donec rhoncus enim ultrices. Feugiat vivamus proin justo vulputate, consequat diam nulla amet senectus senectus felis. Elit rhoncus torquent aenean per magna diam! Phasellus laoreet quis tempus. Parturient volutpat condimentum arcu tincidunt tempor. Tempor et ipsum tortor.
 
-No need to place long text here, otherwithe we need to to change site layout
+**** No need to place long text here, otherwise we need to to change site layout further
          <div>
       </div>
    </section>
